PR 1150 * readelf.c (get_mips_symbol_other): New function.   (get_symbol_other): New function.   (process_symbol_table): Call get_symbol_other() to get a description of the     st_other field if it contains more information than just the visibility. * elfxx-mips.c (mips_elf_calculate_relocation): Ignore an undefined symbol if     it is optional.   (_bfd_mips_elf_merge_symbol_attribute): Make sure that the optional flag is     merged as well as the visibility. * elfxx-mips.h (_bfd_mips_elf_merge_symbol_attribute): Prototype.   (elf_backend_merge_symbol_attribute): Define. * mips.h (STO_OPTIONAL): Define.   (ELF_MIPS_IS_OPTIONAL): Define.